force-app/main/default/objects/ccrz__E_Product__c/fields/ccrz__UnitOfMeasureLabel__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UnitOfMeasureLabel__c</fullName>
    <description>Label for the unit of measure of this product. This is used for tiered pricing displays as a possible parameter.</description>
    <inlineHelpText>Label for the unit of measure of this product. This is used for tiered pricing displays as a possible parameter.</inlineHelpText>
    <label>Unit Of Measure Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>