force-app/main/default/objects/ccrz__E_Product__c/fields/Distributor_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Equivalent__c</fullName>
    <label>Distributor Equivalent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>