force-app/main/default/objects/ccrz__E_Product__c/fields/EC_Display_SKU__c.field-meta.xml
<CustomField>
    <fullName>EC_Display_SKU__c</fullName>
    <label>Display SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>