force-app/main/default/objects/ccrz__E_Product__c/fields/EC_Product_Media_Url__c.field-meta.xml
<CustomField>
    <fullName>EC_Product_Media_Url__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EC Product Media Url</label>
    <referenceTo>ccrz__E_ProductMedia__c</referenceTo>
    <relationshipLabel>CC Products</relationshipLabel>
    <relationshipName>CC_Products</relationshipName>
    <type>Lookup</type>
</CustomField>