force-app/main/default/objects/ccrz__E_Product__c/fields/EC_Statement_Of_Assurance__c.field-meta.xml
<CustomField>
    <fullName>EC_Statement_Of_Assurance__c</fullName>
    <label>StatementOfAssurance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>