force-app/main/default/objects/ccrz__E_Product__c/fields/FeaturesAndBenefits__c.field-meta.xml
<CustomField>
    <fullName>FeaturesAndBenefits__c</fullName>
    <label>FeaturesAndBenefits</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>