force-app/main/default/objects/ccrz__E_Product__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <formula>MID(ccrz__SKU__c, 0,FIND(&apos;.&apos;, ccrz__SKU__c )-1 )</formula>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>