force-app/main/default/objects/ccrz__E_Product__c/fields/Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Package_Code__c</fullName>
    <description>formula field to get the package code from SKU</description>
    <formula>IF(CONTAINS(ccrz__SKU__c,&quot;.&quot; ), MID(ccrz__SKU__c, FIND(&apos;.&apos;, ccrz__SKU__c )+1,LEN(ccrz__SKU__c)) , &apos;&apos;)</formula>
    <label>Package Code</label>
    <type>Text</type>
</CustomField>