force-app/main/default/objects/ccrz__E_Product__c/fields/Product_Types__c.field-meta.xml
<CustomField>
    <fullName>Product_Types__c</fullName>
    <description>user story 120073 -identify the type of product such as equipment(E) and chemical(X)</description>
    <label>Product Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>