force-app/main/default/objects/ccrz__E_Product__c/fields/Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy__c</fullName>
    <description>To identity the type of product (Equipment or Chemical)</description>
    <label>Taxonomy </label>
    <length>255</length>
    <type>Text</type>
</CustomField>