force-app/main/default/objects/ccrz__E_Product__c/fields/Use_Type__c.field-meta.xml
<CustomField>
    <fullName>Use_Type__c</fullName>
    <label>Use Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Use</fullName>
            </value>
            <value>
                <fullName>Dispensed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>