force-app/main/default/objects/ccrz__E_Product__c/recordTypes/ccrz__ProductType_Assembly.recordType-meta.xml
<RecordType>
    <fullName>ccrz__ProductType_Assembly</fullName>
    <active>true</active>
    <description>Product Type Assembly</description>
    <label>ProductType_Assembly</label>
</RecordType>