force-app/main/default/objects/ccrz__E_Product__c/recordTypes/ccrz__ProductType_Config.recordType-meta.xml
<RecordType>
    <fullName>ccrz__ProductType_Config</fullName>
    <active>true</active>
    <description>Product Type Configuration</description>
    <label>ProductType_Config</label>
</RecordType>