force-app/main/default/objects/ccrz__E_Product__c/recordTypes/ccrz__ProductType_Normal.recordType-meta.xml
<RecordType>
    <fullName>ccrz__ProductType_Normal</fullName>
    <active>true</active>
    <description>Product Type Normal</description>
    <label>ProductType_Normal</label>
</RecordType>