force-app/main/default/objects/ccrz__E_Product__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__SKU__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ccrz__ProductType__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ccrz__Storefront__c</columns>
    <columns>ccrz__ProductStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>