force-app/main/default/objects/ccrz__E_Product__c/listViews/ccrz__All1.listView-meta.xml
<ListView>
    <fullName>ccrz__All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__ProductId__c</field>
        <operation>startsWith</operation>
        <value>00</value>
    </filters>
    <label>All</label>
</ListView>